export interface Mediator {
  notify(notification: string): string;
}
